--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,7 @@ after_success:
     - docker build -t babillie/multi-server ./server
     - docker build -t babillie/multi-worker ./worker
     # login to the docker cli
-    - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_ID" --password-stdin
+    - echo "$docker_password" | docker login -u "$docker_id" --password-stdin
     # push images to docker hub
     - docker push babillie/multi-client
     - docker push babillie/multi-nginx
